# YukselC2Interpolation

./: .gitignore  README.txt
.ipynb_checkpoints/: README-checkpoint.txt
C++/: .gitignore  CMakeLists.txt  README.md  YukselC2Interpolation.h  main.cpp  result.csv  result_plot.py
Python/: YukselC2Interpolation.py  YukselC2Interpolation_examples.ipynb
Python/old_files/: bezier_interpolate.ipynb
